fixed section 4 and section 5 spacing issue

--- a/style/_section4.scss
+++ b/style/_section4.scss
@@ -1,6 +1,8 @@
 .section4{
+    background-image: url('../images/mobile/image-graphic-design.jpg');
+    height: 100vh;
     &_text{
-        transform: translateY(-30vh);
+        transform: translateY(-40vh);
         display: flex;
         flex-direction: column;
         justify-content: center;
