--- a/style/_section5.scss
+++ b/style/_section5.scss
@@ -1,6 +1,7 @@
 .section5{
+    height: 100vh;
     &_text{
-        transform: translateY(-30vh);
+        transform: translateY(-40vh);
         display: flex;
         flex-direction: column;
         justify-content: center;
