--- a/style/_testimonials.scss
+++ b/style/_testimonials.scss
@@ -1,6 +1,6 @@
 .testimonials{
     background-color: $white;
-    padding-top: $marginVertical;
+    padding-top: 5rem;
     padding-bottom: $marginVertical;
     .testimonial-item{
         margin-bottom: 2rem;
